--- a/public/css/form.css
+++ b/public/css/form.css
@@ -6,7 +6,7 @@ body {
 
 /*sets banner of the page  */
 h1 {
-    background: url('images/banner.jpg');
+    background: url('../images/banner.jpg');
     width: auto;
     height: 500px;
     color: white;
@@ -21,11 +21,11 @@ h1 {
 
 /*sets all divs to a certain width and height */
 div {
-    width: 1520px;
     height: auto;
     padding-top: 50px;
     padding-bottom: 50px;
 }
+
 
 /*sets naviagtion */
 #nvgtn {
@@ -44,78 +44,21 @@ div {
 
 }
 
-/*gets everything in the first container */
-.mycontainer {
-    width: 1520px;
-    overflow: auto;
-
-}
-
-/*gets all divs in the first container */
-.mycontainer div {
-    width: 33%;
-    float: left;
-}
-
-/*sets center alignment for the Solent history  */
-.box1 {
-    background-color: #D6644A;
+h2 {
+    color: white;
     text-align: center;
 }
 
-/*sets center alignment for the Solent ambition  */
-.box2 {
-    background-color: #D6644A;
+#contactForm {
+    color: white;
     text-align: center;
+    line-height: 20px;
 }
 
-/*sets width and margin for the solent ambition  */
-#profile2 {
-    margin-bottom: 20px;
-
+form {
+    text-align: right;
 }
 
-/*sets center alignment for the open day information  */
-.box3 {
-    background-color: #D6644A;
-    text-align: center;
-}
-
-/*sets width and margin for the Solent open day */
-#profile3 {
-    width: 400px;
-    height: 245px;
-    margin: 0px;
-    margin-right: 10px;
-    margin-bottom: 5px;
-}
-
-
-/*Sets the width of the box to 75 percent */
-.box5 {
-    background-color: #D6644A;
-    width: 75%;
-}
-
-/*Sets width of container */
-.mycontainer2 {
-    width: 1520px;
-    overflow: auto;
-    margin: 0;
-}
-
-/*sets image to the left of the page */
-.mycontainer2 div {
-    float: left;
-}
-
-/*box 6 contains the spark image */
-.box6 {
-    background: url('images/profile6.jpg');
-    width: 25%;
-    height:400px;
-    background-position: center;
-}
 
 /*setting height on only footer divs */
 footer div {
@@ -125,7 +68,6 @@ footer div {
 
 /*setting width of all three divs */
 .page_footer {
-    width: 1520px;
     overflow: auto;
 }
 
