--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,132 +1,59 @@
 /*sets colour of background and white text */
 body {
-    background-color: #D6644A;
-    color: white;
-    width: auto;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
 
 /*sets banner of the page  */
-h1 {
+header {
     background: url('../images/banner.jpg');
-    width: auto;
-    height: 500px;
+    background-size: cover;
     color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 60px;
+    padding: 20px;
     text-align: center;
-    background-position: top right 90px;
-    margin: 0;
-}
-
-/*sets all divs to a certain width and height */
-div {
-    width: auto;
-    height: auto;
-    padding-top: 50px;
-    padding-bottom: 50px;
 }
 
 /*sets naviagtion */
 #nvgtn {
-    display: flex;
-    align-items: space-around;
-    justify-content: stretch;
+    background-color: #333;
+    overflow: hidden;
+    text-align: center;
 }
+
 
 /*organises navigation */
-.nvgtntext {
-    height: 50px;
-    width: 1520px;
-    background: #D6644A;
+nav a {
+    display: inline-block;
     color: white;
     text-align: center;
-
+    padding: 14px 30px;
+    text-decoration: none;
 }
 
-
-/*gets all divs in the first container */
-.mycontainer div {
-    width: 33.33%;
-    float: left;
+/*sets a hover in the navigation */
+nav a:hover {
+    background-color: #ddd;
+    color: black;
 }
 
-/*sets center alignment for the Solent history  */
-.box1 {
-    background-color: #D6644A;
+section {
+    display: flex;
+    padding: 20px;
+}
+
+.box {
+    width: 30%;
+    padding: 20px;
+    margin: 10px;
+    border: 1px solid #ccc;
     text-align: center;
 }
 
-/*sets center alignment for the Solent ambition  */
-.box2 {
-    background-color: #D6644A;
+footer {
+    background-color: #333;
+    color: white;
+    padding: 20px;
     text-align: center;
-}
-
-/*sets width and margin for the solent ambition  */
-#profile2 {
-    margin-bottom: 20px;
-
-}
-
-/*sets center alignment for the open day information  */
-.box3 {
-    background-color: #D6644A;
-    text-align: center;
-}
-
-/*sets width and margin for the Solent open day */
-#profile3 {
-    width: 400px;
-    height: 245px;
-    margin: 0px;
-    margin-right: 10px;
-    margin-bottom: 5px;
-}
-
-
-/*Sets the width of the box to 75 percent */
-.box5 {
-    background-color: #D6644A;
-    width: 75%;
-}
-
-/*Sets width of container */
-.mycontainer2 {
-    overflow: auto;
-    margin: 0;
-}
-
-/*sets image to the left of the page */
-.mycontainer2 div {
-    float: left;
-}
-
-/*box 6 contains the spark image */
-.box6 {
-    background: url('../images/profile6.jpg');
-    width: 25%;
-    height: 400px;
-    background-position: center;
-}
-
-/*setting height on only footer divs */
-footer div {
-    height: 250px;
-    padding: 0px;
-}
-
-/*setting width of all three divs */
-.page_footer {
-    overflow: auto;
-}
-
-/*footer */
-.page_footer div {
-    height: 50px;
-    width: 33.3%;
-    float: left;
 }
 
 /*Follow us*/
