--- a/public/css/activities.css
+++ b/public/css/activities.css
@@ -36,6 +36,7 @@
        color: black;
    }
 
+/* page header */
    #activity_intro {
        color: black;
        display: flex;
@@ -47,7 +48,7 @@
        margin: 0;
    }
 
-      /* CSS styling for table */
+   /* CSS styling for table */
    table {
        border-collapse: collapse;
        width: 100%;
@@ -59,13 +60,15 @@
        padding: 8px;
        text-align: left;
    }
-   
-footer {
-    background-color: #333;
-    color: white;
-    padding: 20px;
-    text-align: center;
-}
+
+/*Footer css*/
+   footer {
+       background-color: #333;
+       color: white;
+       padding: 20px;
+       text-align: center;
+   }
+
    /*Follow us*/
    .fa {
        padding: 20px;
@@ -115,4 +118,3 @@ footer {
        background: #dd4b39;
        color: white;
    }
-
