--- a/public/css/form.css
+++ b/public/css/form.css
@@ -36,7 +36,7 @@ nav a:hover {
     color: black;
 }
 
-
+/*page header */
 h2 {
     color: black;
     display: flex;
@@ -48,12 +48,15 @@ h2 {
     margin: 0;
 }
 
+
+/*Form*/
 #contactForm {
     color: black;
     text-align: center;
     line-height: 20px;
 }
 
+/*Footer css*/
 footer {
     background-color: #333;
     color: white;
