--- a/views/form.ejs
+++ b/views/form.ejs
@@ -26,6 +26,7 @@
       <a class="nvgtntext" href="/activites">Activities</a>
       <a class="nvgtntext" href="/Modules">Modules</a>
       <a class="nvgtntext" href="/form">Registration</a>
+      <a class="nvgtntext" href="/database_import">Database Table</a>
     </nav>
 
 
@@ -73,9 +74,10 @@
 <br>
 <br>
       <!-- Submit button-->
-      <button type="submit">Submit</button>
+      <button type="submit">Submit</button>     
     </form>
 
+    
 
     <hr>
     <!--footer created for a div-->
@@ -114,9 +116,9 @@
         <a href="https://www.youtube.com/user/SolentUniOfficial" class="fa fa-youtube"></a>
         <a href="https://www.solent.ac.uk/" class="fa fa-google"></a>
       </div>
-      
       </footer>  
-      
+ 
+
        <!--javascript connection-->
       <script src="scripts/form.js"></script>
       <script src="scripts/footer.js"></script>
