--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,7 @@
       <a class="nvgtntext" href="/activites">Activities</a>
       <a class="nvgtntext" href="/Modules">Modules</a>
       <a class="nvgtntext" href="/form">Registration</a>
+      <a class="nvgtntext" href="/database_import">Database Table</a>
     </nav>
 
     <hr>
