--- a/public/css/form.css
+++ b/public/css/form.css
@@ -48,6 +48,27 @@ h2 {
     margin: 0;
 }
 
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 18px;
+    text-align: left;
+}
+
+th,
+td {
+    padding: 12px;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
+}
 
 /*Form*/
 #contactForm {
@@ -114,10 +135,16 @@ footer {
     color: white;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
+    /* Adjust styles for smaller screens here */
     nav a {
         display: block;
         padding: 10px;
+    }
+
+    /* Stack the boxes vertically */
+    table {
+        display: block;
     }
 }
