--- a/public/css/modules.css
+++ b/public/css/modules.css
@@ -169,10 +169,17 @@ td {
 }
 
 /* Media queries for responsiveness */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
+    /* Adjust styles for smaller screens here */
     nav a {
         display: block;
         padding: 10px;
     }
+
+    /* Stack the boxes vertically */
+    table{
+        display: block;
+    }
+
 }
