--- a/views/activites.ejs
+++ b/views/activites.ejs
@@ -24,7 +24,7 @@
       <a class="nvgtntext" href="/activites">Activities</a>
       <a class="nvgtntext" href="/Modules">Modules</a>
       <a class="nvgtntext" href="/form">Registration</a>
-      <a class="nvgtntext" href="/database_import">Database Table</a>
+      <a class="nvgtntext" href="/database_import">Records</a>
     </nav>
 
 
