--- a/views/form.ejs
+++ b/views/form.ejs
@@ -26,7 +26,7 @@
       <a class="nvgtntext" href="/activites">Activities</a>
       <a class="nvgtntext" href="/Modules">Modules</a>
       <a class="nvgtntext" href="/form">Registration</a>
-      <a class="nvgtntext" href="/database_import">Database Table</a>
+      <a class="nvgtntext" href="/database_import">Records</a>
     </nav>
 
 
@@ -75,6 +75,15 @@
 <br>
       <!-- Submit button-->
       <button type="submit">Submit</button>     
+
+    <div id="message">
+      <h3>Password must contain the following:</h3>
+      <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+      <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+      <p id="number" class="invalid">A <b>number</b></p>
+      <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+    </div>
+		
     </form>
 
     
